chore(bus): refactoring